Update code legibility, fix scoreBoard display

--- a/css/style2023.css
+++ b/css/style2023.css
@@ -27,6 +27,10 @@ header>h1 {
     overflow: scroll;
     overflow-x: hidden;
 }
+header>h2{
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    color: white;
+}
 
 #container {
     /* background-color: coral; */
@@ -210,7 +214,9 @@ header>h1 {
     /* align-items: center; */
     flex-direction: column;
 }
-#scoreTable th, td{
+
+#scoreTable th,
+td {
     /* background-color: blueviolet; */
     /* padding: 15px; */
     text-align: center;
@@ -219,19 +225,21 @@ header>h1 {
     border-spacing: 10px;
     border-bottom: 1px solid rgb(243, 111, 111);
 }
-#scoreTable{
+
+#scoreTable {
     width: 100%;
     font-size: larger;
-    table-layout:fixed;
+    table-layout: fixed;
 }
 
-th,td
-{
- max-width: 0;
- overflow: hidden;
- text-overflow: ellipsis;
- white-space: nowrap;
+th,
+td {
+    max-width: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
+
 /* th.column_a {width: 30%;}
 th.column_b {width: 70%;} */
 
